[jeff]: updated github actions

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -62,6 +62,9 @@ jobs:
       - name: Authenticate Docker with Artifact Registry
         run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
+      - name: Check Docker config
+        run: cat ~/.docker/config.json
+
       - name: Verify active credentials (debug)
         run: gcloud auth list
 
